<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dskippablelinear&correlator=]]></string>

    <string name="homepagelogo" />
    <string name="searchicon" />
    <string name="upsrtcplacholder" />
    <string name="imageView" />
    <string name="more">more</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="videos">Videos</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="data">data</string>
    <string name="responseStatus">responseStatus</string>
    <string name="statusCode">statusCode</string>
    <string name="mobileCarouselImages">mobileCarouselImage</string>

    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>


    <string name="name">name</string>
    <string name="upsrtcvideoposter" />
    <string name="backnavigation">BackNavigation</string>
    <string name="exorewind">ExoRewind</string>
    <string name="exoplay">ExoPlay</string>
    <string name="exopause">ExoPause</string>
    <string name="exofastforward">ExoFastforward</string>
    <string name="exofullscreen">exofullscreen</string>
    <string name="stream_not_available">streaming not available</string>

    <string name="contentString">contentString</string>
    <string name="contentType">contentType</string>
    <string name="defaultValue" />

    <string name="from">from</string>
    <string name="movie_information_not_available">Movie Info not available</string>
    <string name="empty">epmty</string>
    <string name="view_count">View Count</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="castCrew">Cast_Crew :</string>
    <string name="writtenBy">Written By : </string>
    <string name="directedBy">Director : </string>


</resources>
