<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backOnPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:foregroundGravity="top|left"
            android:padding="10dp"
            android:src="@mipmap/u_back"
            android:contentDescription="@string/backnavigation" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#CC000000"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <!-- <ImageButton
                     android:id="@id/exo_prev"
                     style="@style/ExoMediaButton.Previous"
                     android:visibility="invisible"
                     android:layout_weight="1" />-->

                <ImageButton
                    android:id="@id/exo_rew"
                    style="@style/ExoMediaButton.Rewind"
                    android:layout_weight="1"
                    android:contentDescription="@string/exorewind" />

                <ImageButton
                    android:id="@id/exo_play"
                    style="@style/ExoMediaButton.Play"
                    android:layout_weight="1"
                    android:contentDescription="@string/exoplay" />

                <ImageButton
                    android:id="@id/exo_pause"
                    style="@style/ExoMediaButton.Pause"
                    android:layout_weight="1"
                    android:contentDescription="@string/exopause" />

                <ImageButton
                    android:id="@id/exo_ffwd"
                    style="@style/ExoMediaButton.FastForward"
                    android:layout_weight="1"
                    android:contentDescription="@string/exofastforward" />

                <!--  <ImageButton
                      android:id="@id/exo_next"
                      style="@style/ExoMediaButton.Next"
                      android:visibility="invisible"
                      android:layout_weight="1" />-->


                <ImageButton
                    android:id="@+id/exo_full"
                    style="@style/ExoMediaButton.FullScreen"
                    android:layout_weight="1"
                    android:contentDescription="@string/exofullscreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/exo_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="#FFBEBEBE"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.exoplayer2.ui.DefaultTimeBar
                    android:id="@id/exo_progress"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@id/exo_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="#FFBEBEBE"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

